# rust-scratch

./: .gitignore  Cargo.toml  README.md
my_data/: macros.rs  mod.rs
my_data/macros/: collator_data_v1.rs.data  collator_dia_v1.rs.data  collator_meta_v1.rs.data  collator_reord_v1.rs.data  datetime_buddhist_datelengths_v1.rs.data  datetime_buddhist_datesymbols_v1.rs.data  datetime_chinese_datelengths_v1.rs.data  datetime_chinese_datesymbols_v1.rs.data  datetime_coptic_datelengths_v1.rs.data  datetime_coptic_datesymbols_v1.rs.data  datetime_dangi_datelengths_v1.rs.data  datetime_dangi_datesymbols_v1.rs.data  datetime_ethiopic_datelengths_v1.rs.data  datetime_ethiopic_datesymbols_v1.rs.data  datetime_gregory_datelengths_v1.rs.data  datetime_gregory_datesymbols_v1.rs.data  datetime_hebrew_datelengths_v1.rs.data  datetime_hebrew_datesymbols_v1.rs.data  datetime_indian_datelengths_v1.rs.data  datetime_indian_datesymbols_v1.rs.data  datetime_islamic_datelengths_v1.rs.data  datetime_islamic_datesymbols_v1.rs.data  datetime_japanese_datelengths_v1.rs.data  datetime_japanese_datesymbols_v1.rs.data  datetime_japanext_datelengths_v1.rs.data  datetime_japanext_datesymbols_v1.rs.data  datetime_patterns_buddhist_date_v1.rs.data  datetime_patterns_chinese_date_v1.rs.data  datetime_patterns_coptic_date_v1.rs.data  datetime_patterns_dangi_date_v1.rs.data  datetime_patterns_datetime_v1.rs.data  datetime_patterns_ethiopic_date_v1.rs.data  datetime_patterns_gregory_date_v1.rs.data  datetime_patterns_hebrew_date_v1.rs.data  datetime_patterns_indian_date_v1.rs.data  (+60 more)
src/: main.rs  main2.rs
